--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nanoid": "^5.0.6",
     "next": "14.1.0",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
